Fix validation z-index (it is under header now)

--- a/src/css/_hero.scss
+++ b/src/css/_hero.scss
@@ -74,7 +74,7 @@
       left: 3px;
       padding: 5px 10px;
       position: absolute;
-      z-index: 8;
+      z-index: 2;
 
       @include breakpoint($break-tablet) {
         bottom: 37px;
